feat: Initialize .NET and Angular project structure
- Add .gitignore file to exclude build artifacts and environment files.
- Create Visual Studio solution file for backend and dotnet-api projects.
- Implement DocumentsController with CRUD operations for document management.
- Set up Angular project with initial configuration and dependencies.
- Create environment configuration files for production and development.
- Add main application entry point and index HTML file for Angular app.
- Configure Tailwind CSS for styling and custom utility classes.
- Establish TypeScript configuration for Angular application.

--- a/backend/dotnet-api/DocsPortal.Api/appsettings.Development.json
+++ b/backend/dotnet-api/DocsPortal.Api/appsettings.Development.json
@@ -2,7 +2,52 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Information",
+      "DocsPortal.Api": "Debug"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SmartDocsPortal_Dev;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true",
+    "SqliteConnection": "Data Source=smartdocs_dev.db"
+  },
+  "Jwt": {
+    "Key": "SmartDocsPortal_SuperSecretKey_ForDevelopment_ChangeInProduction_2024",
+    "Issuer": "SmartDocsPortal-Dev",
+    "Audience": "SmartDocsPortal-Users-Dev",
+    "ExpiryInHours": 24
+  },
+  "AllowedOrigins": [
+    "http://localhost:4200",
+    "https://localhost:4200",
+    "http://localhost:3000",
+    "https://localhost:3000",
+    "http://127.0.0.1:4200",
+    "https://127.0.0.1:4200"
+  ],
+  "FileStorage": {
+    "BasePath": "./uploads/dev",
+    "MaxFileSizeBytes": 104857600,
+    "AllowedExtensions": [
+      ".pdf",
+      ".doc",
+      ".docx",
+      ".xls",
+      ".xlsx",
+      ".ppt",
+      ".pptx",
+      ".txt",
+      ".jpg",
+      ".jpeg",
+      ".png",
+      ".gif",
+      ".zip",
+      ".rar"
+    ]
+  },
+  "AemMock": {
+    "BaseUrl": "http://localhost:3000",
+    "Enabled": true,
+    "Timeout": 30
   }
 }
