--- a/backend/dotnet-api/DocsPortal.Api/appsettings.json
+++ b/backend/dotnet-api/DocsPortal.Api/appsettings.json
@@ -2,8 +2,46 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SmartDocsPortal;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  },
+  "Jwt": {
+    "Key": "SmartDocsPortal_SuperSecretKey_ForDevelopment_ChangeInProduction_2024",
+    "Issuer": "SmartDocsPortal",
+    "Audience": "SmartDocsPortal-Users",
+    "ExpiryInHours": 1
+  },
+  "AllowedOrigins": [
+    "http://localhost:4200",
+    "https://localhost:4200",
+    "http://localhost:3000",
+    "https://localhost:3000"
+  ],
+  "FileStorage": {
+    "BasePath": "./uploads",
+    "MaxFileSizeBytes": 52428800,
+    "AllowedExtensions": [
+      ".pdf",
+      ".doc",
+      ".docx",
+      ".xls",
+      ".xlsx",
+      ".ppt",
+      ".pptx",
+      ".txt",
+      ".jpg",
+      ".jpeg",
+      ".png",
+      ".gif"
+    ]
+  },
+  "AemMock": {
+    "BaseUrl": "http://localhost:3000",
+    "Enabled": true
+  }
 }
