--- a/frontend/angular-app/package.json
+++ b/frontend/angular-app/package.json
@@ -7,8 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint",
-    "serve:ssr": "node dist/docs-portal-angular/server/server.mjs"
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -37,7 +36,7 @@
     "autoprefixer": "^10.4.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
-    "karma-chrome-headless": "~3.1.0",
+    "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
